<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="80dp"
        android:text="@string/title"
        android:textColor="#673AB7"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/rollButton"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="50dp"
            android:text="@string/firstResult"
            android:textColor="#6200ED"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:textColor="#673AB7"
            android:text="@string/line"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/resultText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondResult"
            android:textColor="#6200ED"
            android:textSize="36sp"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resetButton" />
    </LinearLayout>

</LinearLayout>